# music-agent

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
agent/: tools.py
static/: index.html
tests/: tools.py
